# macos-sys-assist

./: .gitignore  CHANGELOG.md  IMPROVEMENT_PLAN.md  README.md  allowed_apps.json  config.py  pyproject.toml  requirements.txt  run.sh  security.py  server.py  setup.sh
macos/: __init__.py  accessibility.py  app_lifecycle.py  clipboard.py  filesystem.py  input.py  screenshot.py  task_engine.py  window.py
tools/: __init__.py  actions.py  clipboard.py  filesystem.py  information.py  screenshot.py
